# card-balance-checker

./: .env.example  .gitignore  Dockerfile  PROJECT_STRUCTURE.md  QUICKSTART_FA.md  README.md  advanced_automation.py  app.py  browser_automation.py  card_checker.py  example_usage.py  pyproject.toml  requirements.txt  settings.json  setup.sh  sheets_manager.py  stealth_browser.py  stealth_card_checker.py  test_installation.py
.github/workflows/: ci.yml
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEVELOPMENT_JOURNEY.md  SETUP_GUIDE.md
phone/: __init__.py  adb_controller.py  browser_automation.py  card_checker.py  gui.py  logger.py  main.py  run.py  scrcpy_manager.py  screen_reader.py  web_app.py
phone/templates/: phone.html
prompts/: detailed.md  expert.md  simple.md  visual.md
static/css/: style.css
templates/: index.html
tests/: test_basic.py
