[project]
name = "card-balance-checker"
version = "1.0.0"
description = "Multi-platform card balance checking automation system with AI CAPTCHA solving"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Developer"}
]
keywords = ["automation", "browser", "playwright", "selenium", "captcha", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Flask",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Testing",
]

dependencies = [
    # Web Framework
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    
    # Browser Automation
    "playwright>=1.40.0",
    
    # Stealth Browser (Anti-Detection)
    "seleniumbase>=4.32.0",
    "undetected-chromedriver>=3.5.5",
    
    # Environment
    "python-dotenv>=1.0.0",
    
    # AI CAPTCHA Solver
    "google-generativeai>=0.8.0",
    "Pillow>=10.0.0",
    
    # Google Sheets
    "gspread>=6.0.0",
    "google-auth>=2.0.0",
    
    # HTTP Client
    "requests>=2.31.0",
    "aiohttp>=3.9.0",
    
    # Terminal UI
    "rich>=13.0.0",
]

[project.optional-dependencies]
ai-captcha = [
    "ultralytics>=8.0.0",
    "opencv-python>=4.8.0",
    "huggingface_hub>=0.20.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.17.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "card-balance-checker[ai-captcha,dev]",
]

[project.urls]
Homepage = "https://github.com/username/card-balance-checker"
Documentation = "https://github.com/username/card-balance-checker/tree/main/docs"
Repository = "https://github.com/username/card-balance-checker"
Issues = "https://github.com/username/card-balance-checker/issues"

[project.scripts]
card-checker = "app:main"
phone-automation = "phone.web_app:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv.sources]
# Add any custom sources here if needed

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hatch
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
)/
'''

[tool.ruff]
line-length = 100
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
